--- a/css/style.css
+++ b/css/style.css
@@ -107,46 +107,24 @@ nav #toggle, nav label {
   justify-content: center;
   width: 100%; }
 
-/* .h2Catalogo p{
-    font-family: 'League Spartan', sans-serif;
-    font-weight: lighter;
-    color: white;
-    background-color: black;
-    margin-right: 900px;
-    margin-left: 100px;
-    padding: 5px;  
-    display: flex;
-    align-items: center;  
-    justify-content: center;
-    
-}
-
-
-
-.sectionCatalogo div img{
-    padding: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-} */
-.h2Catalogo {
+.h2Catalogo p {
+  text-decoration: none;
   font-family: 'League Spartan', sans-serif;
   font-weight: lighter;
   color: white;
+  background-color: black;
+  border-radius: 5px;
+  padding: 5px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: black;
-  margin-bottom: 20px;
-  padding: 5px;
-  margin-left: 500px;
-  margin-right: 600px; }
+  text-align: center;
+  margin-left: 550px;
+  margin-right: 550px; }
 
 .sectionCatalogo img {
   padding: 10px;
   align-items: center;
-  margin-left: 350px; }
+  margin-left: 400px; }
 
 .footerCatalogo ul {
   list-style: none;
@@ -171,18 +149,19 @@ nav #toggle, nav label {
   display: flex;
   justify-content: center;
   background-color: black;
+  border-radius: 5px;
   margin-bottom: 20px;
   padding: 5px;
-  margin-left: 500px;
-  margin-right: 600px; }
+  margin-left: 550px;
+  margin-right: 550px; }
 
 .pLocales {
   font-family: 'League Spartan', sans-serif;
   font-weight: lighter;
-  margin-left: 370px; }
+  padding: 5px;
+  margin-left: 410px; }
 
 .fondoMainLocales {
-  background-color: #DB83A3;
   display: flex;
   padding: 40px;
   width: 100%;
@@ -190,7 +169,8 @@ nav #toggle, nav label {
 
 .mainContactos {
   display: flex;
-  width: 100%; }
+  width: 100%;
+  overflow: hidden; }
 
 .ul1Contactos li a {
   display: inline-block;
@@ -202,12 +182,12 @@ nav #toggle, nav label {
   font-family: 'League Spartan', sans-serif; }
 
 .conteiner div ul {
-  height: 100%;
-  margin-top: 100px;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-template-areas: none; }
+  grid-template-areas: none;
+  height: 100%;
+  margin-top: 100px; }
 
 .mainSN {
   font-family: 'League Spartan', sans-serif;
@@ -215,6 +195,9 @@ nav #toggle, nav label {
   width: 100%;
   background-image: url("../assets/buzos-foto.jpg");
   padding: 20px; }
+
+.footerSN ul {
+  margin-left: 300px; }
 
 @media (max-width: 768px) {
   nav .menu {
@@ -250,7 +233,23 @@ nav #toggle, nav label {
   .fondoFooterIndex div {
     font-size: 10px; }
   .divFooterIndex2 {
-    font-size: 50px; } }
+    font-size: 50px; }
+  .h2Catalogo p {
+    margin-left: 300px;
+    margin-right: 300px; }
+  .sectionCatalogo img {
+    width: 300px;
+    height: 300px;
+    margin-left: 230px; }
+  .footerCatalogo ul {
+    margin-left: 150px; }
+  .h2-locales {
+    margin-left: 300px;
+    margin-right: 300px; }
+  .pLocales {
+    margin-left: 250px; }
+  .footerSN {
+    font-size: 12px; } }
 
 @media (max-width: 320px) {
   .titulo {
@@ -289,4 +288,30 @@ nav #toggle, nav label {
   .fondoFooterIndex div {
     font-size: 10px; }
   .divFooterIndex2 {
-    display: none; } }
+    display: none; }
+  .h2Catalogo p {
+    margin-left: 90px;
+    margin-right: 90px; }
+  .sectionCatalogo img {
+    width: 200px;
+    height: 200px;
+    margin-left: 60px; }
+  .footerCatalogo ul {
+    margin-left: 20px;
+    gap: 1rem;
+    font-size: 10px; }
+  .h2-locales {
+    margin-left: 90px;
+    margin-right: 90px; }
+  .pLocales {
+    margin-left: 50px; }
+  .mainContactos {
+    flex-direction: column; }
+  .div1contactos {
+    font-size: 12px; }
+  .conteiner nav ul li a {
+    display: none; }
+  .mainSN {
+    font-size: 12px; }
+  .footerSN nav ul li a {
+    font-size: 6px; } }
