--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,8 @@
 @import "../layout/main-locales";
 @import "../layout/main-contactos";
 @import "../layout/main-SN";
-@import "../layout/footer-SN";
+
 
 @import "../layout/media-768";
+@import "../layout/media-402";
 @import "../layout/media-320";
