--- a/css/style.css
+++ b/css/style.css
@@ -102,24 +102,24 @@ nav #toggle, nav label {
 .headerCatalogo {
   font-family: 'League Spartan', sans-serif;
   padding: 20px;
-  background-color: #DB83A3;
+  color: black;
   display: flex;
   justify-content: center;
   width: 100%; }
 
-.h2Catalogo p {
-  text-decoration: none;
-  font-family: 'League Spartan', sans-serif;
-  font-weight: lighter;
-  color: white;
-  background-color: black;
-  border-radius: 5px;
-  padding: 5px;
+.h2Catalogo {
+  width: 100%;
   display: flex;
-  justify-content: center;
-  text-align: center;
-  margin-left: 550px;
-  margin-right: 550px; }
+  align-items: center;
+  justify-content: center; }
+  .h2Catalogo p {
+    text-decoration: none;
+    font-family: 'League Spartan', sans-serif;
+    font-weight: lighter;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+    padding: 5px; }
 
 .sectionCatalogo img {
   padding: 10px;
@@ -128,11 +128,10 @@ nav #toggle, nav label {
 
 .footerCatalogo ul {
   list-style: none;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5rem;
-  margin-left: 400px; }
+  flex-direction: row;
+  justify-content: space-evenly; }
 
 .footerCatalogo ul li a {
   text-decoration: none;
@@ -143,34 +142,31 @@ nav #toggle, nav label {
   padding: 5px; }
 
 .h2-locales {
-  font-family: 'League Spartan', sans-serif;
-  font-weight: lighter;
-  color: white;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  background-color: black;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  padding: 5px;
-  margin-left: 550px;
-  margin-right: 550px; }
+  align-items: center;
+  justify-content: center; }
+  .h2-locales p {
+    text-decoration: none;
+    font-family: 'League Spartan', sans-serif;
+    font-weight: lighter;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+    padding: 5px; }
 
 .pLocales {
   font-family: 'League Spartan', sans-serif;
   font-weight: lighter;
-  padding: 5px;
-  margin-left: 410px; }
-
-.fondoMainLocales {
-  display: flex;
-  padding: 40px;
-  width: 100%;
-  justify-content: space-between; }
+  padding: 5px; }
 
 .mainContactos {
+  list-style: none;
+  text-decoration: none;
   display: flex;
+  flex-direction: column;
   width: 100%;
-  overflow: hidden; }
+  height: 100%; }
 
 .ul1Contactos li a {
   display: inline-block;
@@ -186,18 +182,25 @@ nav #toggle, nav label {
   grid-template-columns: auto;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas: none;
-  height: 100%;
-  margin-top: 100px; }
+  height: 100%; }
 
-.mainSN {
+.textoSN {
+  position: absolute;
+  top: 50%;
   font-family: 'League Spartan', sans-serif;
-  font-size: 23px;
+  font-size: 20px;
+  color: black;
   width: 100%;
-  background-image: url("../assets/buzos-foto.jpg");
-  padding: 20px; }
-
-.footerSN ul {
-  margin-left: 300px; }
+  height: 100%;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-image: url(../assets/buzos-foto.jpg);
+  height: 300px;
+  width: 100%;
+  align-items: center;
+  justify-content: center; }
 
 @media (max-width: 768px) {
   nav .menu {
@@ -234,22 +237,14 @@ nav #toggle, nav label {
     font-size: 10px; }
   .divFooterIndex2 {
     font-size: 50px; }
-  .h2Catalogo p {
-    margin-left: 300px;
-    margin-right: 300px; }
-  .sectionCatalogo img {
-    width: 300px;
-    height: 300px;
-    margin-left: 230px; }
-  .footerCatalogo ul {
-    margin-left: 150px; }
-  .h2-locales {
-    margin-left: 300px;
-    margin-right: 300px; }
-  .pLocales {
-    margin-left: 250px; }
   .footerSN {
     font-size: 12px; } }
+
+@media (max-width: 402px) {
+  .footerCatalogo ul li a {
+    font-size: 10px; }
+  .textoSN {
+    font-size: 10px; } }
 
 @media (max-width: 320px) {
   .titulo {
@@ -289,29 +284,14 @@ nav #toggle, nav label {
     font-size: 10px; }
   .divFooterIndex2 {
     display: none; }
-  .h2Catalogo p {
-    margin-left: 90px;
-    margin-right: 90px; }
-  .sectionCatalogo img {
-    width: 200px;
-    height: 200px;
-    margin-left: 60px; }
-  .footerCatalogo ul {
-    margin-left: 20px;
-    gap: 1rem;
-    font-size: 10px; }
-  .h2-locales {
-    margin-left: 90px;
-    margin-right: 90px; }
-  .pLocales {
-    margin-left: 50px; }
+  .headerCatalogo {
+    font-size: 20px; }
   .mainContactos {
-    flex-direction: column; }
+    flex-direction: row; }
   .div1contactos {
     font-size: 12px; }
-  .conteiner nav ul li a {
-    display: none; }
-  .mainSN {
-    font-size: 12px; }
+  .textoSN {
+    font-size: 10px;
+    top: 40%; }
   .footerSN nav ul li a {
     font-size: 6px; } }
