--- a/layout/_footer.scss
+++ b/layout/_footer.scss
@@ -1,20 +1,34 @@
-.footerCatalogo{
-    ul{
+// .footerCatalogo{
+//     ul{
+//         list-style: none;
+//         width: 100%;
+//         display:grid;
+//         justify-content: center;
+//         align-items: center;   
+//     }
+//     li a{
+//         text-decoration: none;
+//         font-family:'League Spartan', sans-serif ;
+//         color: black;
+//         background-color: white;
+//         border-radius: 5px;
+//         padding: 5px;
+//     }
+// }
+
+.footerCatalogo ul {
     list-style: none;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
-    margin-left: 400px;
-}
-}
-.footerCatalogo{
-    ul li a{
+    flex-direction: row;
+    justify-content: space-evenly;
+  
+     }
+  
+  .footerCatalogo ul li a {
     text-decoration: none;
-    font-family:'League Spartan', sans-serif ;
+    font-family: 'League Spartan', sans-serif;
     color: black;
     background-color: white;
     border-radius: 5px;
-    padding: 5px;
-}
-}
+    padding: 5px; }
