--- a/layout/_main-catalogo.scss
+++ b/layout/_main-catalogo.scss
@@ -1,12 +1,16 @@
 .headerCatalogo{
     font-family: 'League Spartan', sans-serif;
     padding: 20px;
-    background-color: #DB83A3;
+    color: black;
     display: flex;
     justify-content: center;
     width: 100%;
 }
 .h2Catalogo{ 
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     p{
     text-decoration: none;
     font-family: 'League Spartan', sans-serif;
@@ -15,11 +19,7 @@
     background-color: black;
     border-radius: 5px;
     padding: 5px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin-left: 550px;
-    margin-right: 550px;
+   
 }
 }
 
