--- a/layout/_main-contactos.scss
+++ b/layout/_main-contactos.scss
@@ -1,7 +1,11 @@
 .mainContactos{
+    list-style: none;
+    text-decoration: none;
     display: flex;
+    flex-direction: column;
     width: 100%;
-    overflow: hidden;
+    height: 100%;
+    
 }
 
 
@@ -24,6 +28,6 @@
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas: none;
     height: 100%;
-    margin-top: 100px;
+    
 }
 }
